Bug 320352 - Wrong Row Count in ChannelContactModel
Summary: Wrong Row Count in ChannelContactModel
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-27 15:00 UTC by David Edmundson
Modified: 2013-05-29 14:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-05-27 15:00:35 UTC
Created ad-hoc group chat, ended with ghost entries in participants list.
See http://i.imgur.com/2fRShWc.png
Comment 1 David Edmundson 2013-05-29 14:13:19 UTC
Git commit 3a8b29160f8f0c4b0e7b093d64427ab650e6fa17 by David Edmundson.
Committed on 29/05/2013 at 15:28.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Fix wrong rowcount in ChannelContactModel
REVIEW: 110710

M  +5    -3    lib/channel-contact-model.cpp

http://commits.kde.org/telepathy-text-ui/3a8b29160f8f0c4b0e7b093d64427ab650e6fa17