Fix wrong rowcount in ChannelContactModel

BUG: 320352
REVIEW: 110710